crates/ars-components/src/utility/snapshots/ars_components__utility__swap__tests__swap_off_content_hidden.snap
---
source: crates/ars-components/src/utility/swap.rs
expression: "snapshot_attrs(&on.connect(&|_| {}).off_content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "off-content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "swap",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Hidden,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
