crates/ars-components/src/utility/snapshots/ars_components__utility__swap__tests__swap_off_content_visible.snap
---
source: crates/ars-components/src/utility/swap.rs
expression: "snapshot_attrs(&off.connect(&|_| {}).off_content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "off-content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "swap",
            ),
        ),
    ],
    styles: [],
}
